get chat messages controller is implemented
